# Volume_6_Matin_Linux-C_Learning

./: README.md
study_test01/makefile_demo/: hello_demo  hellospeak  hellospeak.c  makefile  speak.c  speak.h
study_test01/text_coredump/: CMakeLists.txt
study_test01/text_coredump/tests/: cmake_test.cc  coredump_test.cc  demo_log1.cc
study_test02/shared_bike/conf/: log.conf  shared_bike.ini
study_test02/shared_bike/git/log4cpp/: log4cpp-config
study_test02/shared_bike/git/log4cpp/tests/: dailyrolling_file.log.2021-01-13  testbench  testmain
study_test02/shared_bike/src/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cpp  shared_bike
study_test02/shared_bike/src/common/: CMakeCache.txt  CMakeLists.txt  Logger.cc  Logger.h  cmake_install.cmake  configdef.h  iniconfig.cc  iniconfig.h
study_test02/shared_bike/third/lib/iniparser/: libiniparser.so.1
study_test02/shared_bike/third/lib/log4cpp/: liblog4cpp.so.5.0.6
study_test03/: .gitignore
